k8s/apps/media/arr/bazarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: arr
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
    - name: web
      port: 80
      targetPort: http
