k8s/apps/media/arr/bazarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: arr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "bazarr.k8s.ghiot.be"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr
          port: 80
